--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_service: ^0.0.1+1
-  firebase_core: ^2.13.1
+  firebase_core: any
   
   #Firebase
   
