--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,7 @@ dependencies:
   cloud_functions: ^4.3.3
   email_validator:
   awesome_dialog: ^3.1.0
-  #Firebase
-  
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  firebase_messaging: ^14.6.8
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
