--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ flutter:
   - assets/images/ranks/p.png
   - assets/images/ranks/r.png
   - assets/images/ranks/s.png
+  - assets/images/home.gif
   
   
   #  - images/a_dot_ham.jpeg
