--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   firebase_messaging: ^14.6.8
   cupertino_icons: ^0.1.2
   youtube_player_flutter: ^8.1.2
+  just_audio: ^0.9.32
+  audioplayers:
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -106,6 +108,10 @@ flutter:
   - assets/images/Trophy.gif
   - assets/images/lock.png
   - assets/images/mark.png
+  - assets/images/Back_white.png
+  - assets/Notification.mp3
+  - assets/Correct_answer.mp3
+  - assets/Wrong_answer.mp3
   
   
   #  - images/a_dot_ham.jpeg
